[package]
name = "metrolink-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflare-bypasser = "0.2.0"
failure = "0.1.8"
headless_chrome = "1.0.9"
reqwest = {version = "0.11.23", features = ["cookies", "brotli", "gzip"]}
tokio = {version = "1.35.1", features = ["full"]}
